# CaseFanController

./: README.md
controller/: CMakeLists.txt  controller.cpp  controller.hpp  lookup.cpp  lookup.hpp  main.cpp
enclosure/: .gitignore  EnclosurePrimary.FCStd
pcb/case_controller/: case_controller.kicad_pcb  case_controller.kicad_pro  case_controller.kicad_sch  fp-lib-table  sym-lib-table
pcb/lib/Project Components/: Project Components.kicad_sym
pcb/lib/Project Components/Project Components.pretty/: Fan Connector.kicad_mod  Level_Shifter.kicad_mod  MB_Fan_Header.kicad_mod  Molex Connector.kicad_mod  RPi Pico.kicad_mod  SF-TB6612FNG.kicad_mod
